# fill_employee_task_tracker

./: .env_example  README.md  docker-compose.yaml  docs.py  entrypoint.sh  pyproject.toml
config/: settings.py  urls.py
employee_tasks/: admin.py  apps.py  filters.py  models.py  paginators.py  serializer.py  urls.py  views.py
employee_tasks/migrations/: 0001_initial.py
employee_tasks/tests/: fabrics.py  test_employee_task.py
